--- a/_data/nav/nav_bar.yml
+++ b/_data/nav/nav_bar.yml
@@ -3,7 +3,7 @@
 - name: Gang
   link: /gang/
 - name: Wiki
-  link: /wiki.html
+  link: /wiki/
 - name: System
   link: /system.html
 - name: Contact
