add collections for npcs and organizations, update template for locations

--- a/_config.yml
+++ b/_config.yml
@@ -67,6 +67,14 @@ collections:
   locations:
     output: true
     permalink: /wiki/:collection/:name 
+  organizations:
+    output: true
+    permalink: /wiki/:collection/:name
+  npcs:
+    locations:
+    output: true
+    permalink: /wiki/:collection/:name 
+  
 
 # Build settings
 theme: minima
