rework wiki links for simplicity

--- a/_config.yml
+++ b/_config.yml
@@ -54,8 +54,14 @@ defaults:
       path: ""
       type: "locations"
     values:
-      layout: "wiki"
       img_root: "assets/img/world/locations/"
+-
+    scope:
+      path: ""
+      type: "factions"
+    values:
+      img_root: "assets/img/world/factions"
+      
 
 
 collections_dir: all_collections
@@ -63,17 +69,16 @@ collections_dir: all_collections
 collections:
   player_characters:
     output: true
-    permalink: /wiki/:collection/:name
+    permalink: /wiki/:name
   locations:
     output: true
-    permalink: /wiki/:collection/:name 
-  organizations:
+    permalink: /wiki/:name 
+  factions:
     output: true
-    permalink: /wiki/:collection/:name
+    permalink: /wiki/:name
   npcs:
-    locations:
     output: true
-    permalink: /wiki/:collection/:name 
+    permalink: /wiki/:name 
   
 
 # Build settings
