Implementing new metadata structure and wiki landing pages

--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,7 @@ defaults:
         path: ""
         type: "factions"
       values:
+        layout: "wiki"
         img_root: "assets/img/world/factions/"
 
 collections_dir: all_collections
