--- a/_data/world/factions/underworld.yml
+++ b/_data/world/factions/underworld.yml
@@ -1,68 +1,90 @@
 - name: The Unseen
+  id: the-unseen
   tier: 4
   hold: S
   status: 0
 - name: The Hive
+  id: the-hive
   tier: 4
   hold: S
   status: 0
 - name: The Circle of Flame
+  id: the-circle-of-flame
   tier: 3
   hold: S
   status: 3
 - name: The Silver Nails
+  id: the-silver-nails
   tier: 3
   hold: S
   status: 0
 - name: Lord Scurlock
+  id: lord-scurlock
   tier: 3
   hold: S
   status: -2
+  character-class: spooks-and-supernaturals
 - name: The Crows
+  id: the-crows
   tier: 2
   hold: W
   status: 0
 - name: The Red Sashes
+  id: the-red-sashes
   tier: 2
   hold: W
   status: 1
 - name: The Dimmer Sisters
+  id: the-dimmer-sisters
   tier: 2
   hold: S
   status: -2
+  excerpt: Ancient gang of witches with a subterranean temple hideout and a large body chock-full of ghosts.
 - name: The Grinders
+  id: the-grinders
   tier: 2
   hold: W
   status: 0
 - name: The Billhooks
+  id: the-billhooks
   tier: 2
   hold: W
   status: -3
+  has-page: true
+  excerpt: A powerful gang based in The Docks. Previously fighting an internal cold war until the rival captain of the gang was accidentally turned into the vessel for an ancient spirit by the Nameless. Now, they work from their massive butchery to fight alongside the Seventh Tower Consortium.
 - name: The Wraiths
+  id: the-wraiths
   tier: 2
   hold: W
   status: 0
 - name: Ulf Ironborn
+  id: ulf-ironborn
   tier: 1
   hold: S
   status: 1
 - name: The Fog Hounds
+  id: the-fog-hounds
   tier: 1
   hold: W
   status: 0
 - name: The Lost
+  id: the-lost
   tier: 1
   hold: W
   status: 0
 - name: The Gray Cloaks
+  id: the-graycloaks
   tier: 
   hold: 
-  status: 
+  status:
+  excerpt: a regiment of disgraced former Bluecoats who were fired for investigating Lord Strangford too closely. Former rivals of the Nameless, now forced into true retirement after a deadly war left them powerless.
 - name: The Lampblacks
+  id: the-lampblacks
   tier:
   hold: 
   status:
 - name: Lugos
+  id: lugos
   tier:     
   hold: 
   status:
