--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,7 @@ defaults:
         path: ""
         type: "locations"
       values:
+        layout: "wiki"
         img_root: "assets/img/world/locations/"
   -
       scope:
