Add remaining dramatis personae

--- a/_data/world/characters/spooks-and-supernaturals.yml
+++ b/_data/world/characters/spooks-and-supernaturals.yml
@@ -56,3 +56,7 @@
 - name: Doctor Friedrich the Crow
   id: doctor-friedrich
   excerpt: Amorphous plague doctor. Devoted to the Immortal Emperor and vivisection. On a boat!
+
+- name: Joseph Woodward
+  id: joseph-woodward
+  excerpt: A man in a hat. Real estate agent for the Seventh Tower Consortium. Father to Sizzle. Synergizes across all metrics. 
