minor npc updates

--- a/_data/world/characters/others-of-note.yml
+++ b/_data/world/characters/others-of-note.yml
@@ -4,11 +4,11 @@
 
 - name: François
   id: francois
-  excerpt: Chef extraordinaire. Rival to Giancarlo, murderer of Giancarlo's master and destroyer of their school. Sought eldritch perfection in cuisine. Ruined, possessed by . . .
+  excerpt: Chef extraordinaire. Rival to Giancarlo, murderer of Giancarlo's master and destroyer of their school. Sought eldritch perfection in cuisine. Ruined, currently trapped in Cruncho.
 
 - name: Bea
   id: bea
-  excerpt: Former sous-chef to François. Wielder of an enormous claymore. Now a vampire in François' body. She wants revenge.
+  excerpt: Former sous-chef to François. Wielder of an enormous claymore. Formerly a vampire in François' body, now trapped in Cruncho.
 
 - name: Studebaker Spud
   id: studebaker-spud
