Update Valanthe stub

--- a/_data/world/characters/criminals.yml
+++ b/_data/world/characters/criminals.yml
@@ -12,7 +12,7 @@
 
 - name: Valanthe
   id: valanthe
-  excerpt: Red Sash. Drug dealer. Sapphic disaster.
+  excerpt: Red Sash. Drug dealer. Sapphic disaster. Now missing an eye.
 
 - name: Mulligan
   id: mulligan
