Add Sven the Crow stub to NPCs

--- a/_data/world/characters/spooks-and-supernaturals.yml
+++ b/_data/world/characters/spooks-and-supernaturals.yml
@@ -55,6 +55,10 @@
   id: doctor-friedrich
   excerpt: Amorphous plague doctor. Devoted to the Immortal Emperor and vivisection. On a boat!
 
+- name: Doctor Sven the Crow
+  id: doctor-sven
+  excerpt: Amorphous plague doctor. New owner of one of [Flan](/wiki/flan/)'s kidneys.
+
 - name: Joseph Woodward
   id: joseph-woodward
   excerpt: A man in a hat. Real estate agent for the Seventh Tower Consortium. Father to Sizzle. Synergizes across all metrics. 
