Add contribute page to nav links, plus some link styling updates

--- a/_data/nav/nav_bar.yml
+++ b/_data/nav/nav_bar.yml
@@ -5,7 +5,7 @@
 - name: Wiki
   link: /wiki/
   sublinks:
-    - page: Wiki Home
+    - page: Home
       link: /wiki/
     - page: PCs
       link: /wiki/player_characters/
@@ -15,6 +15,8 @@
       link: /wiki/factions/
     - page: Locations
       link: /wiki/locations/
+    - page: Contribute
+      link: /wiki/contribute/
   link: /wiki/
 - name: System
   link: /system.html
